package com.datacollect.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.datacollect.entity.SpeedData;
import org.apache.ibatis.annotations.Mapper;

/**
 * 速率数据Mapper
 * 
 * @author system
 * @since 2024-01-01
 */
@Mapper
public interface SpeedDataMapper extends BaseMapper<SpeedData> {
}








