package com.datacollect.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.datacollect.entity.TaskInfo;
import org.apache.ibatis.annotations.Mapper;

/**
 * 端侧任务信息Mapper
 * 
 * @author system
 * @since 2024-01-01
 */
@Mapper
public interface TaskInfoMapper extends BaseMapper<TaskInfo> {
}








