package com.datacollect.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.datacollect.entity.VmosData;
import org.apache.ibatis.annotations.Mapper;

/**
 * vMOS数据Mapper
 * 
 * @author system
 * @since 2024-01-01
 */
@Mapper
public interface VmosDataMapper extends BaseMapper<VmosData> {
}








